# pdf-names-indexer

./: .gitignore  README.md  pdf_names_indexer.py  release.spec  setup.cfg
src/: pdf_names_indexer.py
tests/: test_indexer.py
tests/TestData/Odyssey/: expected_sorted.txt  names_file.txt
