[metadata]
name = pdf-names-indexer
version = 2021.10.22a1
author = Jan Deneweth
author_email = jandeneweth@hotmail.com
description = A program to parse names from a PDF format file and output a page index
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
url = https://github.com/jandeneweth/pdf-names-indexer
project_urls =
    Bug Tracker = https://github.com/jandeneweth/pdf-names-indexer/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pdfminer.six >=20211012
python_requires = >=3.9

[options.extras_require]
test =
    pytest >=6.2.5
build =
    pyinstaller >=4.5.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pdf-names-indexer = pdf_names_indexer:main

[tool:pytest]
testpaths = tests
